--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@ body {
 }
 
 .popup {
-  max-width: 400px;
+  max-width: auto;
   color: black;
   margin-top: -30px;
   margin-left: -10px;
   padding: 10px;
+  display: block;
+  text-align: center;
 }
 
 .entryLog {
